objects/TILBP__TIPurchasedCourse__c.object
<CustomObject>
    <fields>
        <fullName>TILBP__Course__c</fullName>
        <label>Course</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__PercentComplete__c</fullName>
        <label>Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TILBP__TICourse__c</fullName>
        <label>Course</label>
        <referenceTo>TILBP__TI_Content__c</referenceTo>
        <relationshipLabel>TI Purchased Courses</relationshipLabel>
        <relationshipName>TI_Purchased_Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TILBP__TIUser__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TI User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TI Purchased Courses</relationshipLabel>
        <relationshipName>TI_Purchased_Courses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TILBP__TotalTimeSeconds__c</fullName>
        <label>Total Time Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__TotalViews__c</fullName>
        <label>Total Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TILBP__User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TI Purchased Course</label>
    <listViews>
        <fullName>TILBP__All</fullName>
        <columns>NAME</columns>
        <columns>TILBP__TICourse__c</columns>
        <columns>TILBP__TIUser__c</columns>
        <columns>TILBP__TotalTimeSeconds__c</columns>
        <columns>TILBP__TotalViews__c</columns>
        <columns>TILBP__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TILBP__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TIPC{0000000}</displayFormat>
        <label>TI Purchased Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TI Purchased Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>